[ ADD ] keep screen on and support full screen for phones with buttons on screen

--- a/android/giraffeplayer/src/main/AndroidManifest.xml
+++ b/android/giraffeplayer/src/main/AndroidManifest.xml
@@ -12,9 +12,10 @@
         >
         <activity
             android:name=".GiraffePlayerActivity"
+            android:keepScreenOn="true"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="sensor"
-            />
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
 
     </application>
 
